removed hello world and added user and restaurant api
