# api/controllers/user.js
@@ -1,20 +1,17 @@
 'use strict';
-	// Include our "db"
 	var db = require('../../config/userService')();
-	// Exports all the functions to perform on the db
-	module.exports = {getAll, createUser, getUserById, updateUser, deleteUser, loginUser};
-
-	//GET /movie operationId
-	function getAll(req, res, next) {
-	  res.json({ movies: db.getUserById()});
+	module.exports = {getAllUsers, createUser, getUserById, updateUser, deleteUser, loginUser, logoutUser};
+	
+	function getAllUsers(req, res, next) {
+	  res.json({ users: db.getUserById()});
 	}
-	//POST /movie operationId
+	
 	function createUser(req, res, next) {
 		res.json({success: db.createUser(req.body), description: "User added to the list!"});
 	}
-	//GET /movie/{id} operationId
+	
 	function getUserById(req, res, next) {
-		var id = req.swagger.params.id.value; //req.swagger contains the path parameters
+		var id = req.swagger.params.id.value; 
 		var user = db.getUserById(id);
 		if(user) {
 			res.json(user);
@@ -22,27 +19,41 @@
 			res.status(204).send();
 		}        
 	}
-	//PUT /movie/{id} operationId
+	
 	function updateUser(req, res, next) {
-		var id = req.swagger.params.id.value; //req.swagger contains the path parameters
-		var user = req.body;
-		if(db.updateUser(id, user)){
-			res.json({success: 1, description: "Movie updated!"});
+		var id = req.body.id;
+		if(db.updateUser(id,req.body)){
+			res.json({success: 1, description: "user updated!"});
 		}else{
 			res.status(204).send();
 		}
 	}
-	//DELETE /movie/{id} operationId
+	
 	function deleteUser(req, res, next) {
-		var id = req.swagger.params.id.value; //req.swagger contains the path parameters
+		var id = req.body.id; 
 		if(db.deleteUser(id)){
-			res.json({success: 1, description: "Movie deleted!"});
+			res.json({success: 1, description: "user deleted!"});
 		}else{
 			res.status(204).send();
 		}
 	}
 
 	function loginUser(req, res, next){
-		var user = req.body;
-		res.json({ movies: db.loginUser(user)});
+		var user = db.loginUser(req.body)
+		if(user) {
+      res.json(user);
+    }else {
+      res.status(204).send();
+    } 
 	}
+
+	function logoutUser(req, res, next){
+		var user = db.logoutUser(req.body.id)
+		if(user){
+			res.json(user)
+		}
+		else{
+			res.status(204).send()
+		}
+	}
+
