# api/swagger/swagger.yaml
@@ -3,7 +3,7 @@ info:
   version: "0.0.1"
   title: Hello World App
 # during dev, should point to your local machine
-host: localhost:10010
+host: 192.168.88.50:8080
 # basePath prefixes all resource paths 
 basePath: /
 # 
@@ -18,33 +18,18 @@ consumes:
 produces:
   - application/json
 paths:
-  /movie:
-    # our controller name
-    x-swagger-router-controller: movie
-    get:
-      operationId: getAll
-      description: get the movies list
-      # define the type of response for Success "200" and Error
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/GetMoviesListResponse"
-        default:
-          description: Error
-          schema:
-            $ref: "#/definitions/ErrorResponse"
+  /adduser:
+    x-swagger-router-controller: user
     post:
-      operationId: save
-      description: add a new movie to the list
-      # movie info to be stored
+      operationId: createUser
+      description: add a new user to the list
       parameters:
         - name: title
-          description: Movie properties
+          description: user properties
           in: body
           required: true
           schema:
-            $ref: "#/definitions/Movie"
+            $ref: "#/definitions/User"
       responses:
         "200":
           description: Success
@@ -54,43 +39,74 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /movie/{id}:
-    # our controller name
-    x-swagger-router-controller: movie
+  /listusers:
+    x-swagger-router-controller: user
     get:
-      operationId: getOne
-      description: get a movie
-      # define the type of response for Success "200" and Error
-      parameters:
-        - name: id
-          type: string
-          in: path
-          required: true
+      operationId: getAllUsers
+      description: get the users list
       responses:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/GetMovieResponse"
+            $ref: "#/definitions/GetUsersListResponse"
         default:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-    put:
-      operationId: update
-      description: update a movie
-      # define the parameters
+  /login:
+    x-swagger-router-controller: user
+    post:
+      operationId: loginUser
+      description: check user 
       parameters:
-        - name: id
-          description: Movie id
-          type: string
-          in: path
-          required: true
         - name: title
-          description: Movie properties
+          description: user properties
           in: body
           required: true
           schema:
-            $ref: "#/definitions/Movie"
+            $ref: "#/definitions/loginUser"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GetLoginResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /logout:
+    x-swagger-router-controller: user
+    post:
+      operationId: logoutUser
+      description: logout user 
+      parameters:
+        - name: title
+          description: user properties
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/logoutUser"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GetLogoutResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /updateuser:
+    x-swagger-router-controller: user
+    post:
+      operationId: updateUser
+      description: add a new user to the list
+      parameters:
+        - name: title
+          description: user properties
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/UpdateUser"
       responses:
         "200":
           description: Success
@@ -100,35 +116,47 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-    delete:
-      operationId: delMovie
-      description: delete a movie
-      # define the parameters
+  /deleteuser:
+    x-swagger-router-controller: user
+    post:
+      operationId: deleteUser
+      description: delete user 
       parameters:
-        - name: id
-          description: Movie id
-          type: string
-          in: path
+        - name: title
+          description: user properties
+          in: body
           required: true
+          schema:
+            $ref: "#/definitions/deleteUser"
       responses:
         "200":
           description: Success
           schema:
-            $ref: "#/definitions/GeneralResponse"
+            $ref: "#/definitions/GetRemovedUser"
         default:
           description: Error
           schema:
-            $ref: "#/definitions/ErrorResponse"                  
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
-# complex objects have schema definitions
 definitions:
-  GetMoviesListResponse:
-    required:
-      - movies
+  User:
+    type: object
     properties:
-      # The array of movies
-      movies:
+      title:
+        type: string
+        description: task object name
+      password:
+        type: string
+        description: task description
+      cpassword:
+        type: string
+        description: task description
+  GetUsersListResponse:
+    required:
+      - users
+    properties:
+      users:
         type: array
         items: 
           type: object
@@ -137,33 +165,66 @@ definitions:
               type: string
             title:
               type: string
-            year:
-              type: number
-  Movie:
+  loginUser:
     type: object
     properties:
       title:
         type: string
         description: task object name
-      year:
-        type: number
+      password:
+        type: string
         description: task description
-    required:
-      - title
-      - year
-  GetMovieResponse:
-    required:
-      - id
-      - title
-      - year
+  GetLoginResponse:
+    type: object
+    properties:
+      title:
+        type: string
+        description: task object name
+      login:
+        type: string
+        description: task description
+  logoutUser:
+    type: object
     properties:
       id:
         type: string
-      title: 
+        description: task object name
+  GetLogoutResponse:
+    type: object
+    properties:
+      title:
         type: string
-      year:
-        type: number
-  
+        description: task object name
+      login:
+        type: string
+        description: task description
+  UpdateUser:
+    type: object
+    properties:
+      id:
+        type: string
+        description: id
+      title:
+        type: string
+        description: task object name
+      password:
+        type: string
+        description: task description
+  deleteUser:
+    type: object
+    properties:
+      id:
+        type: string
+        description: task object name
+  GetRemovedUser:
+    type: object
+    properties:
+      title:
+        type: string
+        description: task object name
+      login:
+        type: string
+        description: task description
   GeneralResponse:
     type: object
     properties:
